--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,7 +6,7 @@ html, body {
 
 @font-face {
   font-family: Quantico;
-  src: url("Quantico-Bold.ttf");
+  src: url("Quantico-Italic.ttf");
   font-weight: 400;
 }
 
