--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer>
-  <span class="muted">© {{ site.signoff }}. All Rights Reserved.</span><br>
-  <a href="http://github.com/chloerei/scribble" class="muted">built with Jekyll using Scribble theme</a>
-  <br>
-  <br>
-  <img src="{{ site.baseurl }}/images/scribble2.png" alt="scribble" />
+  <a href="http://github.com/muan/scribble" class="muted">built with Jekyll using Scribble theme</a>
+  <br />
+  <br />
+  <img src="/images/scribble2.png" alt="scribble" /> 
 </footer>
