--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta content='{{ site.title }}' property='og:title' />
     <title>{{ site.title }}</title>
     {% include head.html %}
   </head>
