--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta content='{{ page.title }} - {{ site.title }}' name='title' />
+    <meta content='{{ page.title }} - {{ site.title }}' name='og:title' />
     <title>{{ page.title }} - {{ site.title }}</title>
     {% include head.html %}
   </head>
@@ -7,17 +9,12 @@
     {% include header.html %}
     <div id='container'>
       {% include links.html %}
-      {% include page_pagination.html %}
       <div class="content">
-        <section class='post'>
-        <h1>{{ page.title }}</h1>
-        {{ content }}
-        </section>
-      </div>
-      {% if site.disqus_shortname and page.disqus != false %}
-        {% include disqus.html %}
-      {% endif %}
-      {% include links.html %}
+          <section class='post'>
+            <h1>{{ page.title }}</h1>
+            {{ content }}
+          </section>
+        </div>
     </div>
     {% include footer.html %}
   </body>
