Fixed: github url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       <a data-color="#55acee" data-title="" class="elsewhere-link is-twitter" href="https://twitter.com/yellowdi">
         {% include svg/twitter.html %}
       </a>
-      <a data-color="#333333" data-title="" class="elsewhere-link is-github" href="https://github.com/jgthms">
+      <a data-color="#333333" data-title="" class="elsewhere-link is-github" href="https://github.com/yellowdi">
         {% include svg/github.html %}
       </a>
       <a data-color="#333333" data-title="" class="elsewhere-link is-instagram" href="https://instagram.com/yellowdi">
