--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,6 +3,7 @@
     href="/articles"
     data-title="Articles"
     data-color="#2478ff"
+    data-invert="true"
     data-other-color="aliceblue">
     {% include icons/square.html %}
   </a>
@@ -26,6 +27,7 @@
     href="/photo"
     data-title="Photo"
     data-color="#9524ff"
+    data-invert="true"
     data-other-color="ghostwhite">
     {% include icons/right.html %}
   </a>
